templates/ibm-itx-rs-prod_template.yaml
---
# Source: ibm-itx-rs-prod/templates/denyallnetworkpolicy.yaml
####################################################################
# Licensed Materials Property of HCL
# (c) Copyright HCL Technologies Ltd. 2022. All rights reserved.
# 
# Trademark of HCL Technologies Limited
####################################################################
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
  labels:
    app.kubernetes.io/name: "itx-rs"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "release-name"
    helm.sh/chart: "ibm-itx-rs-prod"
    release: "release-name"
spec:
  podSelector:
    matchLabels:
      networking/allow-inernet-access: "true"
  ingress: []
---
# Source: ibm-itx-rs-prod/templates/networkpolicy.yaml
####################################################################
# Licensed Materials Property of HCL
# (c) Copyright HCL Technologies Ltd. 2020. All rights reserved.
# 
# Trademark of HCL Technologies Limited
####################################################################
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: itx-rs-network-policy
  labels:
    app.kubernetes.io/name: "itx-rs"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "release-name"
    helm.sh/chart: "ibm-itx-rs-prod"
    release: "release-name"
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "itx-rs"
      app.kubernetes.io/managed-by: "Helm"
      app.kubernetes.io/instance: "release-name"
      helm.sh/chart: "ibm-itx-rs-prod"
      release: "release-name"
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
---
# Source: ibm-itx-rs-prod/templates/service.yaml
####################################################################
# Licensed Materials Property of HCL
# (c) Copyright HCL Technologies Ltd. 2020. All rights reserved.
# 
# Trademark of HCL Technologies Limited
####################################################################
apiVersion: v1
kind: Service
metadata:
  name: "itx-rs-svc"
  labels:
    app.kubernetes.io/name: "itx-rs"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "release-name"
    helm.sh/chart: "ibm-itx-rs-prod"
    release: "release-name"
spec:
  type: ClusterIP
  ports:      
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: tcp-http
  selector:
    app.kubernetes.io/name: "itx-rs"
    app.kubernetes.io/instance: "release-name"
    type: prod
  sessionAffinity: ClientIP
---
# Source: ibm-itx-rs-prod/templates/deployment.yaml
####################################################################
# Licensed Materials Property of HCL
# (c) Copyright HCL Technologies Ltd. 2020-2022. All rights reserved.
# 
# Trademark of HCL Technologies Limited
####################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itx-rs-deployment
  labels:
    app.kubernetes.io/name: "itx-rs"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "release-name"
    helm.sh/chart: "ibm-itx-rs-prod"
    release: "release-name"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "itx-rs"
      app.kubernetes.io/instance: "release-name"
  template:
    metadata:
      labels:
        type: prod
        affinity: itx-rs-server
        app.kubernetes.io/name: "itx-rs"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/instance: "release-name"
        helm.sh/chart: "ibm-itx-rs-prod"
        release: "release-name"
      annotations:
        productID: "e3ea97bcc2ae4e39b9a0ac4fe309f546"
        productName: "IBM Sterling Transformation Extender for Red Hat OpenShift"
        productVersion: "10.1.2"
        productMetric: "VIRTUAL_PROCESSOR_CORE"
        productChargedContainers: "All"        
    spec:
      hostNetwork: false
      hostPID: false
      template: null
      hostIPC: false
      securityContext:
        runAsNonRoot: true
      serviceAccountName: itx-rs
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: affinity
                  operator: In
                  values:
                  - itx-rs-server
              topologyKey: kubernetes.io/hostname
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
            weight: 3
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
      - name: itx-rs
        image:
          cp.icr.io/cp/ibm-itx-rs@sha256:bc9b60086ca95a8ef6303be33cedabf475d10dd8ad161c75567f51d19aba13b8
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: false
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false     
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            cpu: 1000m
            memory: 4Gi
          limits:
            cpu: 4000m
            memory: 16Gi
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: itx-rs-vol-data
            mountPath: /data
          - name: itx-rs-vol-logs
            mountPath: /logs
        livenessProbe:
          exec:
            command:
            - /setup/health/liveness.sh
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 45
        readinessProbe:
          exec:
            command:
            - /setup/health/readiness.sh
          initialDelaySeconds: 7
          periodSeconds: 60
          timeoutSeconds: 45
      volumes:
      - name: itx-rs-vol-data
        persistentVolumeClaim:
          claimName: itx-rs-pvc-data
      - name: itx-rs-vol-logs
        persistentVolumeClaim:
          claimName: itx-rs-pvc-logs
---
# Source: ibm-itx-rs-prod/templates/configmap-ssc.yaml
####################################################################
# Licensed Materials Property of HCL
# (c) Copyright HCL Technologies Ltd. 2020. All rights reserved.
# 
# Trademark of HCL Technologies Limited
####################################################################
---
# Source: ibm-itx-rs-prod/templates/hpa.yaml
####################################################################
# Licensed Materials Property of HCL
# (c) Copyright HCL Technologies Ltd. 2021. All rights reserved.
#
# Trademark of HCL Technologies Limited
####################################################################
---
# Source: ibm-itx-rs-prod/templates/route.yaml
####################################################################
# Licensed Materials Property of HCL
# (c) Copyright HCL Technologies Ltd. 2020. All rights reserved.
# 
# Trademark of HCL Technologies Limited
####################################################################
---
# Source: ibm-itx-rs-prod/templates/tests/test-pod.yaml
####################################################################
# Licensed Materials Property of HCL
# (c) Copyright HCL Technologies Ltd. 2020. All rights reserved.
# 
# Trademark of HCL Technologies Limited
####################################################################
